--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "mmtreeast-html-tags",
   "version": "0.1.0",
   "description": "HTML tags name , fetch from MDN",
+  "type": "module",
   "source": "src/index.ts",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "npm run prepublish && parcel build",
     "check": "biome check src --write",
     "format": "biome format src --write",
-    "gen": "./opt/index.mjs",
+    "gen": "./opt/index.js",
     "prepublish": "npm run gen && npm run check"
   },
   "keywords": [
