--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.1",
   "description": "HTML tags name , fetch from MDN",
   "type": "module",
-  "source": "src/index.ts",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -15,7 +11,7 @@
     }
   },
   "scripts": {
-    "build": "npm run prepublish && parcel build",
+    "build": "./opt/build.js",
     "check": "biome check src --write",
     "format": "biome format src --write",
     "gen": "./opt/index.js",
@@ -30,14 +26,9 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@parcel/bundler-library": "^2.14.4",
-    "@parcel/config-default": "^2.14.4",
-    "@parcel/packager-ts": "^2.14.4",
-    "@parcel/transformer-typescript-types": "^2.14.4",
     "@types/node": "^22.14.1",
     "cheerio": "^1.0.0",
     "dax-sh": "^0.42.0",
-    "parcel": "^2.14.4",
     "typescript": "^5.8.3"
   },
   "publishConfig": {
@@ -51,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/phothinmg/mmtreeast-html-tags/issues"
   },
-  "homepage": "https://github.com/phothinmg/mmtreeast-html-tags/blob/main/readme.md"
+  "homepage": "https://github.com/phothinmg/mmtreeast-html-tags/blob/main/readme.md",
+  "dependencies": {
+    "lwe8-build": "^0.1.12"
+  }
 }
