--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,5 @@
 node_modules
 src
-.parcelrc
 package-lock.json
 tsconfig.json
 notes
@@ -8,3 +7,4 @@ opt
 .parcel-cache
 .github
 __temp_dir
+.vscode
